test/compile_errors/err_option_zip_non_option.w
//! expect-error: Option.zip() expects an Option argument

fn main:
    let x: Option[i32] = Some(1)
    let _ = x.zip(2)
